--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-top: 100px;
+  margin-bottom: -50px;  
 }
 
 .App-link {
